# WakeOnLanBot

./: .env.example  CALLBACK_DEBUG_GUIDE.md  Cargo.toml  DEBUG_INSTRUCTIONS.md  DIAGNOSTIC_INSTRUCTIONS.md  DIAGNOSTIC_REPORT.md  DIAGNOSTIC_SUMMARY.md  DOCKER_TROUBLESHOOTING.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  QUICK_DEBUG.md  QUICK_FIX_SUMMARY.md  README.md  TELOXIDE_CALLBACK_FIX_SUMMARY.md  bot.py  diagnostic_wrapper.sh  docker-compose.yml  fix_callback_query_problem.md  requirements.txt  АНАЛИЗ_ОШИБОК.md  ДИАГНОСТИКА_ОШИБОК.md  ИСПРАВЛЕНИЕ_КНОПОК.md
src/: handler.rs  main.rs  tests.rs
