[package]
name = "wakeonlan_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.12.2", features = ["macros", "auto-send", "rustls"] }
log = "0.4"
pretty_env_logger = "0.5"
ssh2 = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net"] }
async-recursion = "1.0"
anyhow = "1"
thiserror = "1" 

[profile.release]
opt-level = "z"
lto = "thin"
strip = true
codegen-units = 1 