[package]
name = "wakeonlan_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
pretty_env_logger = "0.5"
log = "0.4"
ssh2 = "0.9"
chrono = "0.4"

[dev-dependencies]
mockall = "0.11"
tokio-test = "0.4"
serde_json = "1.0" 

[profile.release]
opt-level = "z"
lto = "thin"
strip = true
codegen-units = 1 